--- a/ExercicioResponsividade/style.css
+++ b/ExercicioResponsividade/style.css
@@ -17,19 +17,36 @@ body {
 
 
 .linkMenu {
-    color: rgb(2, 4, 5);
+    color: rgb(5, 0, 0);
     font-size: 2em;
     margin-left: 20px;
     margin-right: 20px;
     display: table;
     float:right;
     margin-top: 60px;
+    color: white;
  
     
 }
-.banner{
-    background-color: black;
+
+@media screen  and (max-width: 998px) {
+    menu { height: 480px; padding: 0px 20px}
+    menu .texto { font-size: 24px;}
+    menu h1 {font-size: 20px;}
+    menu p {font-size: 14px; margin-top: 90px;}
+    menu img {width: 40%; height: 300px; margin-top: 90px;}
+    menu a {padding: 3px 10px; background-color: rgb(24, 24, 24);
+     font-size: 12px; color: floralwhite; text-decoration: none;}
+    
 }
+@media  screen and(max-width: 768px) {
+    menu{ padding: 0px 20px 20px;}
+    menu .texto{width: 100%; text-align: center; margin-top: 20px;}
+    menu h1 { font-size: 18px;}
+    menu p { font-size: 12px; margin-top: 20px;}
+    menu img { width: 100%; height: 300px; margin-top: 20px; float: none;}
+}
+    
 
 
 
